--- a/web/templates/router_detail.html
+++ b/web/templates/router_detail.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Router: {{ ip }}</h2>
-	<a href="http://localhost:8080/router"> BACK </a>
+	<a href="http://localhost:8080"> BACK </a>
 	<table border="1" cellpadding="5" cellspacing="0" >
 		<tr> 
 			<th>Timestamp</th>
